<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/background_light"
    tools:context=".BlueprintActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blueprint_title"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="@color/primary_green" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center"
        android:text="@string/icon_blueprint"
        android:textSize="100sp"
        android:background="@color/card_background"
        android:layout_marginTop="20dp"
        android:importantForAccessibility="no" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/width_label"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height_label"
        android:textSize="18sp"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/depth_label"
        android:textSize="18sp"
        android:textColor="@color/black" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_download_pdf"
        android:backgroundTint="@color/primary_green"
        android:layout_marginTop="30dp" />

</LinearLayout>
